Updated .hgignore for the move from Test_Extensions to Demo_Extensions.

--- a/.hgignore
+++ b/.hgignore
@@ -10,6 +10,7 @@ lapa*
 gnat-math-extn-*
 test/*.exe
 test/*.o
-test/test_extensions
+test/demo_extensions
 test/tests-main
 test/[c,s]geev_generator
+test/[c,s]ggev_generator
