Fix real generalized eigenvalues problems.
Tickets #2, #3.

  * .hgignore: test/tests-main is now test/tests.

  * gnat_math_extensions.gpr (Linker.Linker_Options): add -lgfortran
      (to allow static versions of liblapack, libblas).

  * src/ada_numerics-generic_arrays.ads (Eigensystem(4)): Vectors is a
      Complex_Matrix.

  * src/ada_numerics-generic_arrays.adb (Eigensystem(4)): likewise.
    (Eigensystem(2)): use CE instead of assertion for range checks.

  * test/lapack_version.ads, test/lapack_version.adb: new.

  * test/tests-main.adb: report LAPACK version.

  * test/tests-real_generalized_eigenvalues.adb: expected values
      depend on the LAPACK version; they changed at 3.5.0.
    (Close_Enough, Column): now work with complex vectors & matrices.

  * test/tests.gpr: executable named just "tests".

--- a/.hgignore
+++ b/.hgignore
@@ -11,6 +11,6 @@ gnat-math-extn-*
 test/*.exe
 test/*.o
 test/demo_extensions
-test/tests-main
+test/tests
 test/[cs]geev_generator
 test/[csz]ggev_generator
