Move to Github.
  * .hgignore -> .gitignore, removed the 'glob' line.
  * CHANGES: removed.
  * Makefile: removed the distribution generation section.
  * README: removed.
  * README.md: new, from README.
  * doc/gnat-math-extn.css: removed.
  * doc/index.html: removed.
  * test/Makefile: minor comment change.

--- a/test/Makefile
+++ b/test/Makefile
@@ -12,7 +12,7 @@
 #
 #  Copyright Simon Wright <simon@pushface.org>
 
-# This Makefile is part of the Ada 2005 Math Extensions package, and
+# This Makefile is part of the GNAT Math Extensions package, and
 # is used to build tests.
 
 all:
