--- a/alire.toml
+++ b/alire.toml
@@ -10,17 +10,14 @@ maintainers-logins = ["simonjwright"]
 
 project-files = ["gnat_math_extensions.gpr"]
 
-tags = ["blas", "lapack"]
+tags = ["matrices", "blas", "lapack"]
 
 [[depends-on]]
-[depends-on."case(os)"."linux"]
-liblapack = ">3.0.0"
-libblas = ">3.0.0"
-
-[available."case(os)"]
-"linux|macos" = true
-"..." = false
-
-# [gpr-externals]
-# LIBRARY_TYPE = ["static"]
-
+[depends-on."case(distribution)"."debian|ubuntu|msys2"]
+  "libblas" = "*"
+  "liblapack" = "*"
+  
+[[pins]]  # Added by alr
+libblas = { path='../libblas' }   # Added by alr
+[[pins]]  # Added by alr
+liblapack = { path='../liblapack' }   # Added by alr
