--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ alire-workflow ]
   pull_request:
     branches: [ main ]
 
@@ -14,7 +14,12 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, debian-latest, windows-latest]
+        os:
+          - macos-latest
+          - debian-latest
+          - windows-latest
+        gnat-version:
+          ^11
 
     steps:
       - name: Checkout
