The branch is alire-workflowS!

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 
 on:
   push:
-    branches: [ alire-workflow ]
+    branches: [ alire-workflows ]
   pull_request:
     branches: [ main ]
 
