--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,20 +16,12 @@ jobs:
     strategy:
       matrix:
         os:
-#          - macos-latest
-#          - windows-latest
-          - debian-latest
+          - windows-latest
 
     steps:
     -
       name: Checkout
       uses: actions/checkout@v2
-    # -
-    #   name: ada-actions/toolchain
-    #   uses: ada-actions/toolchain@ce2020
-    #   with:
-    #     distrib: community
-    #     target: native
     -
       name: alire-project/setup-alire
       uses: alire-project/setup-alire@latest-stable
