--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - windows-latest
+          - ubuntu-latest
+          - macos-latest
 
     steps:
     -
