Mainly Alire-related changes.
  * gnat_math_extensions.gpr (Compiler.Default_Switches): spread out,
      put comment above switch. Treat warnings as errors. Don't suppress
      checks, don't warn about Windows line endings.
    (Linker): only need to link agains LAPACK.
  * .gitignore: remove unused items. Add alire-related items.
  *
  * alire.toml: new.
  * .github/workflows/build.yml: new.
  * test/.gitignore: new, extracted from parent.
  * test/alire.toml: new.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-BLAS*
-lib
-parker
-lapa*
-.build
+.build/
 .DS_Store
-*~
-*.gcov
-*.orig
-gnat-math-extn-*
-test/*.exe
-test/*.o
-test/demo_extensions
-test/tests
-test/[cs]geev_generator
-test/[csz]ggev_generator
+alire/
+config/
+lib/
