--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,8 @@ name: Build
 
 on:
   push:
-    branches: [ main, alire ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
