--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v2
     -
       name: alire-project/setup-alire
-      uses: alire-project/setup-alire@latest-stable
+      uses: alire-project/setup-alire@@v1
     -
       name: Build and run tests
       run: |
