--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
     -
       name: Build and run tests
       run: |
+        alr index --name=local --add=git+https://github.com/simonjwright/local-alire-index.git
         alr config --global --set toolchain.assistant false
         alr toolchain --install gnat_native --non-interactive
         alr toolchain --install gprbuild --non-interactive
