--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,9 @@ jobs:
     -
       name: Build and run tests
       run: |
-        alr config --global --set toolchain.assistant false
-        alr toolchain --install gnat_native --non-interactive
-        alr toolchain --install gprbuild --non-interactive
-        alr toolchain --select gnat_native --non-interactive
-        alr toolchain --select gprbuild --non-interactive
-        cd test; alr run --non-interactive
+        alr --non-interactive config --global --set toolchain.assistant false
+        alr --non-interactive toolchain --install gnat_native 
+        alr --non-interactive toolchain --install gprbuild
+        alr --non-interactive toolchain --select gnat_native
+        alr --non-interactive toolchain --select gprbuild
+        cd test; alr --non-interactive run
