--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ lapa*
 *~
 *.gcov
 *.orig
-gnat-math-extn-*
 test/*.exe
 test/*.o
 test/demo_extensions
 test/tests
 test/[cs]geev_generator
 test/[csz]ggev_generator
+alire
