--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 .build/
+alire/
+lib/
+config/
+
 .DS_Store
 *~
 *.gcov
 *.orig
-test/*.exe
-test/*.o
-test/demo_extensions
-test/tests
-test/[cs]geev_generator
-test/[csz]ggev_generator
-alire
-lib
+
