--- a/test/alire.toml
+++ b/test/alire.toml
@@ -1,7 +1,7 @@
 description = "GNAT Math Extensions testing"
 name = "gnat_math_extensions_test"
 licenses = "GPL-3.0-or-later WITH GCC-exception-3.1"
-version = "1.1.0"
+version = "1.2.0"
 
 authors = ["Simon Wright"]
 maintainers = ["Simon Wright <simon@pushface.org>"]
@@ -12,7 +12,7 @@ executables = "tests"
 
 [[depends-on]]
 gnat_math_extensions = "*"
-aunit = "^22.0.0"
+aunit = ">=22.0.0"
 
 [[pins]]
-gnat_math_extensions = { path='../../gnat_math_extensions' }
+gnat_math_extensions = { path='..' }
