--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     -
-      name: alire-project/setup-alire
-      uses: alire-project/setup-alire@v1
+      name: Setup Alire
+      uses: alire-project/setup-alire@v4
     -
       name: Build and run tests
       run: |
