--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,7 @@ jobs:
     -
       name: Build and run tests
       run: |
-        alr --non-interactive config --global --set toolchain.assistant false
-        alr --non-interactive toolchain --install gnat_native
-        alr --non-interactive toolchain --install gprbuild
+        alr --non-interactive settings --global --set toolchain.assistant false
         alr --non-interactive toolchain --select gnat_native
         alr --non-interactive toolchain --select gprbuild
         cd test; alr --non-interactive run
