--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,14 @@ jobs:
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     -
-      name: alire-project/setup-alire
-      uses: alire-project/setup-alire@v1
+      name: Setup Alire
+      uses: alire-project/setup-alire@v4
     -
       name: Build and run tests
       run: |
-        alr --non-interactive config --global --set toolchain.assistant false
-        alr --non-interactive toolchain --install gnat_native
-        alr --non-interactive toolchain --install gprbuild
+        alr --non-interactive settings --global --set toolchain.assistant false
         alr --non-interactive toolchain --select gnat_native
         alr --non-interactive toolchain --select gprbuild
         cd test; alr --non-interactive run
